# QuantumTV

./: .gitignore  README.md  VERSION.txt  package-lock.json  package.json
.github/workflows/: release.yml
crates/core/: Cargo.toml
docs/superpowers/plans/: 2026-05-19-play-page-responsive.md
docs/superpowers/specs/: 2026-05-19-play-page-responsive-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  scheduler.rs
src-tauri/src/commands/: douban_client.rs  home.rs  recommendation.rs  video.rs
src-tauri/src/db/: image_cache.rs  page_cache.rs
src/app/douban/: page.tsx
src/app/play/: page.tsx
src/components/: AppLifecycleWatcher.tsx  UserMenu.tsx  VideoCard.tsx
src/hooks/: useProxyImage.ts  useSourceFilter.ts
src/lib/: imagePreloader.ts
