[package]
name = "quantumtv"
version = "0.7.5"
build = "build.rs"
description = "quantumtv Tauri App"
authors = ["Geon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
quantumtv-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
scraper = "0.22"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
tauri-plugin-http = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
image = "0.24"
moka = { version = "0.12", features = ["future"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"

